<resources>
    <string name="app_name">Lab_C2</string>
    <string name="registrar_alquiler">Registrar alquiler</string>
    <string name="seleccione_la_fecha_de_inicio">Seleccione la fecha de inicio</string>
    <string name="tiempo_de_alquiler">Tiempo de alquiler</string>
    <string name="seleccione_la_fecha_de_fin">Seleccione la fecha de fin</string>
    <string name="precio_de_alquiler">Precio de alquiler</string>
    <string name="seleccione_un_vehiculo">Seleccione un vehiculo</string>
    <string name="seleccione_un_cliente">Seleccione un cliente</string>
    <string name="buscar_veh_culo">Buscar vehículo</string>
    <string name="nuevo_veh_culo">Nuevo vehículo</string>
    <string name="seleccione_la_clave_de_busqueda">Seleccione la clave de busqueda</string>
    <string name="busqueda">Busqueda</string>
    <string name="textview">TextView</string>
    <string name="eliminar_vehiculo">Eliminar vehiculo</string>
    <string name="seleccione_el_tipo_de_vehiculo">Seleccione el tipo de vehiculo</string>
    <string name="guardar">Guardar</string>
    <string name="seleccione_el_estado_del_veh_culo">Seleccione el estado del vehículo</string>
    <string name="nombre">Nombre</string>
    <string name="placa">Placa</string>
    <string name="vehiculo">Vehiculo:</string>
    <string name="cliente">Cliente:</string>
    <string name="editar">Editar</string>

</resources>