<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vehiculos"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:padding="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/claveBusqueda"
            android:layout_width="122dp"
            android:contentDescription="@string/seleccione_la_clave_de_busqueda"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            />

        <EditText
            android:id="@+id/valorBusqueda"
            android:layout_width="192dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/busqueda"
            android:textColorHint="#757575"
            android:autofillHints=""
            android:inputType="text" />
    </LinearLayout>


    <Button
        android:id="@+id/findButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar_veh_culo"
        android:backgroundTint="#163585"
        android:padding="12dp"
        app:cornerRadius="10dp"
        android:layout_margin="1dp"
        />

    <Button
        android:id="@+id/newVehiculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_veh_culo"
        android:layout_margin="1dp"
        android:padding="12dp"
        app:cornerRadius="10dp"
        android:backgroundTint="#1BA10C"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:padding="10dp"
        android:id="@+id/listaVehiculos"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>