<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_margin="10dp"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="274dp"
        android:layout_height="112dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vehiculo"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nombreV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cliente"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nombreC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textview"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/idAlquiler"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="20dp"
            android:text="@string/textview" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editarAlquilerFloat"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:clickable="true"
            android:contentDescription="@string/editar"
            android:src="@drawable/ic_baseline_edit_24"
            tools:ignore="ImageContrastCheck"
            android:focusable="true" />

    </LinearLayout>
</LinearLayout>